--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "dependencies": {
     "express": "^4.17.1",
     "helmet": "^4.3.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "path": "^0.12.7"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
